[package]
name = "uranus_position"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"
thiserror = "1.0.43"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-overrid]
opt-level = 3

[profile.release.package."*"]
opt-level = 3